name:               ldgrp
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base >= 4.16 && < 5
                  , hakyll == 4.16.*
                  , filepath >= 1.4 && < 2
                  , process >= 1.6 && < 2
                  , text
                  , tagsoup
  ghc-options:      -threaded
  default-language: Haskell2010
